-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.722 2010-03-22 20:54:18 jluis Exp $
-----------------------------------------------------------------------------------------

2010-03-22	pwessel
	* *.[ch]:		Replaced BOOLEAN typedef by using GMT_LONG instead.

2010-03-21	jluis
	* *.c:			In mains, replaced all occurrences of fprintf (GMT_stdout, ...)  by
				fprintf (stdout, ...) so that it compiles under VC 2005 and higher.

2010-03-17	pwessel
	* psxy.c:		The -Sw/W symbols did not handle the azimuth/direction conversions
				properly.
	* psxyz.c:		The -Sw/W machinery mistakenly converted angles to radians before
				passing arguments to the plot functions.

2010-03-15	pwessel
	* gmt_io.c:		Added GMT_io.skip_duplicates [FALSE] to control if consecutive
				records with identical x,y should be skipped.  This is needed
				by programs that uses GMT_sph_inonout, which does not expect to
				find duplicates vertices.
	* gmtselect.c:		Turns skip_duplicates on before reading polygons
	* grdmask.c:		Turns skip_duplicates on before reading polygons
	* grdmath.c:		Turns skip_duplicates on before reading polygons
	* ps2raster.c:		Now checks that all PS files begin with %!PS.

2010-03-11	remko
	* ps2raster.c:		End matter did not get parsed when there is no %%Orientation.

2010-03-10	pwessel
	* gmt_map.c:		Tried to free memory when nothing had been allocated.

2010-03-09	pwessel
	* pslegend.c:		Uninitialized text string could put garbage in script.

2010-03-02	pwessel
	* x2sys/x2sys_get.c:	Added undocumented -d option to dump x2sys_index.b to text
				to aid in debugging.
	* mgd77/mgd77.c:	Incorrectly added track list =tracks.lis as another track name
				after correctly including all the listed tracks. No harm done
				other than an annoying "Cannot find track =tracks" message.

2010-02-28	pwessel
	* gmt_map.c:		GMT_wesn_clip function would clip polygons even though